styles/master.styl
// @import url(http://fonts.googleapis.com/css?family=Roboto:300)
@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,500)

*
  box-sizing border-box

body
  font normal 18px Ubuntu, sans-serif
  font-weight 300
  background-color #444
  color #FFF
  margin 0 0 58px

b
  font-weight 500

button
  font inherit
  background-color transparent
  color #FFF
  cursor pointer

a
  text-decoration none
  color #FFF
  cursor pointer

  &:hover
    text-decoration underline

input[type=text], input:not([type])
  border thin solid rgba(0, 0, 0, .8)
  border-radius 1px
  padding 3px
  font inherit

  &:focus
    border-color rgba(255, 255, 255, .4)

select
  vertical-align middle
  font inherit

.pop-slide
  position absolute
  height 100%
  top 0
  right 0
  width 420px
  padding 12px
  background-color rgba(0, 0, 0, .7)
  box-shadow 0 0 20px rgba(0, 0, 0, .8)

  label
    display block

  a
    text-decoration underline

  button
    display block
    border thin solid #FFF
    border-radius 3px
    padding 6px
    width 100%
    box-shadow 0 0 6px #FFF

    &:first-of-type
      margin 48px 0 12px

    &:hover, &:focus
      outline none
      background-color #FFF
      color #222

    &:active
      -webkit-transform translatey(1px)
      box-shadow none

    &.reset-btn
      &:hover, &:focus
        background-color #F44
        border-color #F44
        box-shadow 0 0 6px #F44

.bar
  margin 12px
  background-color rgba(0, 0, 0, .2)
  border-radius 2px
  position relative
  font-size 1.4em

  &:hover
    background-color rgba(0, 0, 0, .3)
    box-shadow 0 0 2px rgba(0, 0, 0, .2)

  [ng-controller]
    border-spacing 0
    width 100%
    display table-row

    a
      display inline-block

    > span
      padding 0 12px
      width 100%
      display table-cell

      &.btns
        padding 0
        width auto
        white-space nowrap

        i:before
          background-color rgba(0, 0, 0, .2)
          width 52px
          line-height 52px

        .reorder-btns i:before
          width 24px

        a:hover i:before
          background-color rgba(0, 0, 0, .6)

    .ok-btn
      color rgb(170, 255, 170)
      opacity .7

    .cancel-btn
      color rgb(255, 150, 150)
      opacity .7

    .mark-visited a:visited
      color #888

    &[ng-controller='NewsBar'],
    &[ng-controller='RssBar'],
    &[ng-controller='SubRedditBar']

      .expanded > *
        display block

        &:before
          content '∘'
          opacity .7

        &:last-child
          margin-bottom 12px

    &[ng-controller='TopSitesBar'] .expanded > *
      display block
      margin 6px 0

      img
        margin-right 6px

      &:last-child
        margin-bottom 12px

  .dull
    color #999

  .prefs
    position absolute
    background rgba(0, 0, 0, .8)
    padding 6px 12px
    border-radius 0 0 3px 3px
    box-shadow 0 6px 24px rgba(0, 0, 0, .7)
    min-height 120px
    top 100%
    right 0
    font-size .8em
    z-index 100

    > *
      display block
      margin-bottom 12px

    label

      span:first-child
        width 120px
        display inline-block

        + *
          width 280px

      .tip
        margin-left 120px

    .tip
      color #CCC
      font-size .8em
      display block

.bar-item-animate
  // Bar animations

  // // FIXME: The initial bars are also being animated.
  // &.ng-enter
  //   opacity 0
  //   &.ng-enter-active
  //     opacity 1

  &.ng-leave
    overflow hidden
    transition all .5s ease
    height 52px
    opacity 1
    &.ng-leave-active
      height 0
      opacity 0

  &.ng-move
    transition all .5s ease
    -webkit-transform translateY(64px)
    &.ng-move-active
      -webkit-transform translateY(0)

  &.ng-move + div
    -webkit-transform translateY(-64px)

  &.ng-move.ng-move-active + div
    -webkit-transform translateY(0)
    transition all 1s ease

.bookmark > a
  line-height 52px
  display inline-block
  padding 0 6px

  &:hover
    text-decoration none
    background-color rgba(0, 0, 0, .2)

  &:active
    background-color #000

#apps
  margin 24px 12px

  .app-item
    position relative
    display inline-block

  .app-ln
    width 52px
    height 52px
    text-decoration none
    display inline-block
    padding 0 10px
    border-radius 3px
    background-color rgba(0, 0, 0, .1)
    margin-right 12px
    // Need absolute font size here for the icons to line vertically center.
    font-size 24px

    &:hover
      background-color rgba(0, 0, 0, .6)
      box-shadow 0 0 3px rgba(0, 0, 0, .9)

    img
      vertical-align -webkit-baseline-middle

    &.new
      background-color #08B
      box-shadow 0 0 9px #08B
      // transition -webkit-transform .5s ease, background-color 1s ease, box-shadow 1s ease
      -webkit-transform scale(1.1)

      &:hover
        box-shadow 0 0 48px #08B

      &:after
        content 'NEW'
        background-color rgba(255, 50, 50, 1)
        color white
        padding 0 3px
        -webkit-transform scale(.5)
        -webkit-transform-origin bottom right
        position absolute
        border-radius 6px 0
        right 0
        bottom 0

.tip
  position absolute
  background-color rgba(0, 0, 0, .8)
  box-shadow 0 2px 6px rgba(0, 0, 0, .3)
  border-radius 2px 2px 2px 0
  display none
  padding 3px 6px
  white-space nowrap
  z-index 1030

[menu-box]
  position relative

  .menu
    position absolute
    z-index 1000
    display none
    float left
    min-width 160px
    padding 5px 0
    margin 2px 0 0
    list-style none
    border 1px solid rgba(0, 0, 0, .15)
    border-radius 9px
    box-shadow 0 6px 12px rgba(0, 0, 0, .2)
    background-color rgba(0, 0, 0, .9)

    &.ne
      bottom 100%
      left 0
      border-bottom-left-radius 0

    &.nw
      bottom 100%
      right 0
      border-bottom-right-radius 0

    &.se
      top 100%
      left 0
      border-top-left-radius 0

    a, .header
      display block
      padding 3px 20px
      line-height 1.428571429
      white-space nowrap

    .header
      font-weight 500

    a
      opacity .9

      i
        margin-right 6px
        opacity .7

      &:hover
        background-color #000
        text-decoration none
        opacity 1

        i
          opacity .9

    .divider
      height 1px
      margin 9px 0
      overflow hidden
      background-color #333

  &.menu-open
    > .menu
      display block
    // > .tip
    //   display none

nav
  position fixed
  bottom 0
  height 37px
  width 100%
  background rgba(30, 30, 30, .9)
  box-shadow 0 0 6px rgba(0, 0, 0, .3)

  .right
    float right

  a
    padding 6px 18px
    text-decoration none
    opacity .4
    display inline-block

    &:hover, &:focus, &.active
      outline none
      background rgba(0, 0, 0, .5)
      opacity 1

    &.active
      color #09F

  .offline-ind
    color #07F
    opacity 1

.radio-bar
  display inline-block
  vertical-align middle
  margin-left 12px

  input[type=radio]
    display none

    + span
      cursor pointer
      border thin solid #FFF
      padding 0 9px

    &:checked + span
      cursor default
      background-color #FFF
      color #000

  label
    float left

    + label
      margin-left -1px

  :first-child span
    border-radius 3px 0 0 3px

  :last-child span
    border-radius 0 3px 3px 0

// Transitions & Animations
.vslide.ng-hide-add,
.vslide.ng-hide-remove
  transition .5s linear all
  display block !important
  overflow hidden

.vslide.ng-hide-remove,
.vslide.ng-hide-add.ng-hide-add-active
  max-height 0
  opacity 0

.vslide.ng-hide-add,
.vslide.ng-hide-remove.ng-hide-remove-active
  max-height 50px
  opacity 1

.pop-slide.ng-hide-add,
.pop-slide.ng-hide-remove
  transition .1s ease-out all
  display block !important
  -webkit-transform-origin right

.pop-slide.ng-hide-remove,
.pop-slide.ng-hide-add.ng-hide-add-active
  -webkit-transform scaleX(0)

.pop-slide.ng-hide-add,
.pop-slide.ng-hide-remove.ng-hide-remove-active
  -webkit-transform scaleX(1)

.v-scale-slide.ng-hide-add,
.v-scale-slide.ng-hide-remove
  transition .2s ease-out all
  display block !important
  -webkit-transform-origin top

.v-scale-slide.ng-hide-remove,
.v-scale-slide.ng-hide-add.ng-hide-add-active
  -webkit-transform scaleY(0)
  opacity 0

.v-scale-slide.ng-hide-add,
.v-scale-slide.ng-hide-remove.ng-hide-remove-active
  -webkit-transform scaleY(1)
  opacity 1

/* Custom checkboxes and radio buttons.
 * Adapted from http://stackoverflow.com/a/14226542/151048 */
input[type=checkbox]
  display none

input[type=checkbox] + span:before
  font-family fontello
  padding-right 3px
  width 1.2em
  display inline-block

input[type=checkbox] + span:before
  content '✗' // check-empty

input[type=checkbox]:checked + span:before
  content '✓' // check-empty

